--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 pydantic==2.5.0
-torch==2.1.0
-torch-geometric==2.4.0
+torch==2.1.0+cpu
 numpy==1.24.3
 pandas==2.0.3
 supabase==2.0.3
 python-dotenv==1.0.0
 scikit-learn==1.3.2
+
+--find-links https://download.pytorch.org/whl/torch_stable.html
